--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero itaque assumenda nesciunt.</h1>
+    <ul>
+        <li>home</li>
+        <li>about us</li>
+        <li>contact us</li>
+    </ul>
 </body>
 </html>
